test: add it-e2e tests that launch backed and fronted